    - Simon Michael contributed multiple changes.
    - Petr Ročkai fixed rcs_recentchanges.
    - Sven M. Hallberg merged the above and added missing features.
  * Add missing newline to Confirm Password prompt.
  * Add missing permalink support to archivepage and titlepage templates.
  * debian/control: Wrap fields.
  * inline: Add author info to archive display.

 -- Joey Hess <joeyh@debian.org>  Sat, 04 Apr 2009 17:47:36 -0400

ikiwiki (3.09) unstable; urgency=low

  * inline: Add title_natural sort order, using Sort::Naturally
    (chrysn)
  * inline: Fix urls to feed when feedfile is used on an index page.
  * git, mercurial: Fix --getctime to return file creation time,
    not last commit time.
  * Updated French translation (Jean-Luc Coulon). Closes: #521072
  * css: Add clear: both to inlinefooter.
  * comments: Fix too loose test for comments pages that matched
    normal pages with "comment_" in their name. Closes: #521322
  * comments: Fix anchor ids to be legal xhtml. Closes: #521339
  * Fix documentation of anonok_pagespec. Closes: #521793
  * Add missing suggests on libtext-textile-perl. Closes: #522039
  * recentchanges: change to using do=goto links for user links.
  * Fix git test suite to use a bare repo.

 -- Joey Hess <joeyh@debian.org>  Sat, 04 Apr 2009 14:33:49 -0400

ikiwiki (3.08) unstable; urgency=low

  * git: Fix utf-8 encoding of author names.
  * git: Manually decode git output from utf-8, avoids
    warning messages on invalidly encoded output.
  * Fix bug that caused weird things to appear as page types.

 -- Joey Hess <joeyh@debian.org>  Sun, 15 Mar 2009 17:54:47 -0400

ikiwiki (3.07) unstable; urgency=low
 
  * Updated German translation (Kai Wasserbäch). Closes: #518377
  * Updated French translation (Jean-Luc Coulon). Closes: #518510
  * wmd: New plugin contributed by William Uther to support the WMD
    Wysiwym markdown editor.
  * smiley: Avoid infinite loop in smiley expansion triggered