@@ -79,7 +79,8 @@ Here are some less often needed parameters:
   page. By default the `inlinepage` template is used, while
   the `archivepage` template is used for archives. Set this parameter to
   use some other, custom template, such as the `titlepage` template that
-  only shows post titles. Note that you should still set `archive=yes` if
+  only shows post titles or the `microblog` template, optimised for
+  microblogging. Note that you should still set `archive=yes` if
   your custom template does not include the page content.
 * `raw` - Rather than the default behavior of creating a blog,
   if raw is set to "yes", the page will be included raw, without additional
