@@ -373,11 +373,13 @@ span.color {
 	padding: 2px;
 }
 
-.comment-header {
+.comment-header,
+.microblog-header {
 	font-style: italic;
 	margin-top: .3em;
 }
-.comment .author {
+.comment .author,
+.microblog .author {
 	font-weight: bold;
 }
 .comment-subject {
