@@ -11,10 +11,8 @@ from there, like I have on [my blog](http://kitenet.net/~joey/blog/)
 	\[[!template id=note text="""  
 	\[[!aggregate expirecount=5 name="dents" url="http://identi.ca/joeyh"  
 	feedurl="http://identi.ca/api/statuses/user_timeline/joeyh.atom"]]  
-	\[[!inline pages="internal(dents/*)" archive=yes show=5 feeds=no]]  
+	\[[!inline pages="internal(dents/*)" template=microblog
+	show=5 feeds=no]]
 	"""]]
-
-For a cleaner look without the post dates, add `template=titlepage`
-to the `inline` directive.
 
 Note: Works best with ikiwiki 3.10 or better.
