@@ -12,6 +12,7 @@ ikiwiki (3.10) UNRELEASED; urgency=low
   * Add missing permalink support to archivepage and titlepage templates.
   * debian/control: Wrap fields.
   * inline: Add author info to archive display.
+  * Add a microblog template that is useful for inlining microblogging posts.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 04 Apr 2009 17:47:36 -0400
 
